typeway/tests/compile_fail/strict_wrong_return.stderr
error: cannot find macro `bind_strict` in this scope
  --> tests/compile_fail/strict_wrong_return.rs:17:33
   |
17 |     let _ = Server::<API>::new((bind_strict!(get_tags),));
   |                                 ^^^^^^^^^^^
